--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <hr size="6" noshade>
 
-<!.....<h3>Unordered list</h3>....!>
+<!.....Unordered list....!>
 
   <h3>Life Education</h3>
   <ul>
