--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>🏁Edwaurdo´s Personal Site🏁</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+
   <table cellspacing="40">
     <td><img src="https://i.imgur.com/H6l79hA.png" alt=" Ed´s Race Car"></td>
     <td>
@@ -21,9 +23,9 @@
   </p>
 
 
-  <hr size="6" noshade>
+  <hr>
 
-<!.....Unordered list....!>
+
 
   <h3>Life Education</h3>
   <ul>
@@ -31,7 +33,7 @@
     <li>Diesel Tech Course</li>
     <li>Online Coding Classes</li>
   </ul>
-  <hr size="3" noshade <h3>Work Expierence</h3>
+  <hr>
 
 <!....Table....!>
   <table cellspacing="20">
@@ -40,7 +42,7 @@
         <th>Dates</th>
         <th>Employer</th>
         <th>Position</th>
-
+<h3>Work Expierence</h3>
       </tr>
     </thead>
     <tbody>
@@ -63,7 +65,7 @@
 
   </table>
 
-  <hr size="6" noshade>
+  <hr>
   <h3>Skills</h3>
   <table cellspacing="10">
     <tr>
@@ -80,12 +82,12 @@
     </tr>
   </table>
 <!....Horizontal line....!>
-  <hr size="3" noshade>
+  <hr>
   <!....Internal Page links....!>
   <a href="Hobbies.html">  <h3>My Hobbies</h3></a>
 
   <a href="Contact-Me.html"><h3>Contact Me</h3></a>
-  <hr size="3" noshade />
+  <hr>
 <!....Image link....!>
   <img src="https://i.imgur.com/FERxNvD.png" alt="Ed´s Big Fish"> <img src="https://i.imgur.com/U6vO6v7.png" alt="Ed´s Adirondack Chair"> <img src="https://i.imgur.com/Y4GWA95.png" alt="1972 MGB Roadster">
 
